// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders renders with all props 1`] = `
<TextInput
  allowFontScaling={true}
  keyboardType="email-address"
  multiline={true}
  onChangeText={[MockFunction]}
  onSubmitEditing={[MockFunction]}
  placeholder="Test"
  placeholderTextColor="#555555"
  returnKeyType="done"
  secureTextEntry={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDE8CA",
        "borderColor": "#FFFFFF",
        "borderRadius": 5,
        "borderWidth": 1,
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "fontWeight": "400",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
        "textAlignVertical": "center",
      },
      Object {
        "backgroundColor": "rgba(255, 0, 0, 0.2)",
        "borderColor": "rgba(255, 0, 0, 0.5)",
        "color": undefined,
      },
      Object {},
      undefined,
    ]
  }
  testID="test"
  underlineColorAndroid="transparent"
  value="Foo"
/>
`;

exports[`TextInput renders renders with minimum required props 1`] = `
<TextInput
  allowFontScaling={true}
  placeholderTextColor="#555555"
  style={
    Array [
      Object {
        "backgroundColor": "#EDE8CA",
        "borderColor": "#FFFFFF",
        "borderRadius": 5,
        "borderWidth": 1,
        "color": "#212121",
        "flex": 1,
        "fontFamily": "Muli-SemiBold",
        "fontSize": 17,
        "fontWeight": "400",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
        "textAlignVertical": "center",
      },
      undefined,
      undefined,
      undefined,
    ]
  }
  underlineColorAndroid="transparent"
/>
`;
